# igvc-software

igvc_gazebo/config/: waypoints_real_north.csv  waypoints_real_south.csv
igvc_navigation/src/navigation_client/: CMakeLists.txt  navigation_client.cpp  navigation_client.h
igvc_perception/launch/: slam.launch
igvc_platform/include/igvc_platform/nanopb/protos/: igvc.pb.c  igvc.pb.h
igvc_platform/launch/: camera.launch  velodyne_lidar.launch
igvc_platform/src/motor_controller/: motor_controller.cpp  motor_controller.h
igvc_sandbox/: igvc.rules
